# ftr_align

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ftr_align/: __init__.py  duality.py  metrics.py  network.py  solve.py
ftr_align/cases/: rts_gmlc.py  toy.py
notebooks/: explore_rts_gmlc.py  explore_rtsgmlc.py  explore_toy.py
tests/: test_align.py  test_rts_gmlc.py  test_toy_blocks.py  test_toy_duality.py  test_toy_oracle.py
